@@ -1,4 +1,4 @@
 noinst_LIBRARIES = libconsole.a
-INCLUDES = -I $(top_srcdir)/include
+INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/main
 
-libconsole_a_SOURCES = CON_console.c DT_drawtext.c internal.c
+libconsole_a_SOURCES = CON_console.c internal.c
